{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "7793e297-02e7-48d4-a74f-061e97cd1237",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a72409e8-3017-4278-a75c-2d04bd22ab08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "1329db07-c7c9-4f79-9dad-ae7a37f54463",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Bark",
                    "type": "Button",
                    "id": "ebe74c00-6614-4530-abaa-91827f810d4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "021b3208-9bd7-47ef-a6a3-c7631b9df679",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6aca1605-360e-457e-bd77-97d3e2593fcb",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "693e20d3-184e-4dfc-b998-d3338b79d4b1",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bark",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}